tests/paczka1/small_fuzzy/86916346.err
Error in line 6: t1mIy7 S997 3,2
Error in line 9: t1mIy7 S791 95,4
